<resources>
    <string name="app_name">Jani</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="reminders">Reminders</string>
    <string name="profile">Profile</string>
    <string name="detector">Detector</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log In</string>
    <string name="repeat_pasword">Repeat pasword</string>
    <string name="blogs">Blogs</string>
    <string name="medicines">medicines</string>
    <string name="plus">+</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_symptom">Enter Symptom</string>
    <string name="analyze_symptoms">Analyze symptoms</string>
    <string name="detect">Detect</string>
    <string name="age">Age</string>
    <string name="issue_name">Issue name:</string>
    <string name="medical_term">Medical term:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="medical_specialisation">Medical specialisation:</string>
</resources>